--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "checker"]
-	path = checker
-	url = https://github.com/Lord-Giganticus/checker
+[submodule "ext"]
+	path = ext
+	url = https://github.com/Lord-Giganticus/Python-Modules.git
