--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,4 +1,4 @@
-name: Compile, Push and Release
+name: Auto-Release
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -25,13 +25,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
     - name: Compile py-compiler.py
       run: |
         python -3 pyinstaller -F py-compiler.py
         git commit -a -m "Compile py-compiler"
-        git push 
-             
+        git push    
     - name: Create Release
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
