--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,6 +31,8 @@ jobs:
         git commit -a -m "Compile py-compiler"
         git push    
     - name: Create Release
+      run: |
+          echo "done!"
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
