--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,12 +31,12 @@ jobs:
     - name: "Build & test"
       run: |
           echo "done!"
-
+    - uses: actions/checkout@v2
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
         prerelease: false
-        title: "Development Build"
+        title: "Latest Compile"
         files: |
           dist/py-compiler.exe
