--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,10 +1,9 @@
-name: Auto-Compile
+name: Compiler
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
-  push:
-    branches: [main]
+   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
