--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
         git push
   # This workflow contains a single job called "greet"
   release:
+    needs: [compile]
     # The type of runner that the job will run on
     runs-on: windows-latest
 
