--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         pip install -r requirements.txt
     - name: Compile py-compiler.py
       run: |
+        git pull
         pyinstaller -F py-compiler.py
         git config user.email "mrubins64@gmail.com"
         git config user.name "Lord-Giganticus"
